@@ -225,6 +225,7 @@ class ItemsOSMBuilder():
 
         coords = item_2d.geom.coords[0]
         item_3d = urban.post_box().translate([coords[0], coords[1], 0.0])
+        item_3d.prop_set('ddd:static', False, children=True)
         operator = item_2d.extra['osm:feature'].get('operator')
         item_3d.name = 'Postbox (%s): %s' % (operator, item_2d.name)
         return item_3d
@@ -245,6 +246,7 @@ class ItemsOSMBuilder():
                 item_3d = urban.trash_bin()
             else:
                 item_3d = urban.trash_bin_post()
+            item_3d.prop_set('ddd:static', False, children=True)
             item_3d = self.osm.catalog.add(key, item_3d)
 
         item_3d = item_3d.rotate([0, 0, item_2d.extra['ddd:angle'] - math.pi / 2])
@@ -373,11 +375,11 @@ class ItemsOSMBuilder():
         item_3d = self.osm.catalog.instance(key)
         if not item_3d:
             item_3d = urban.lamppost(height=5.5, r=0.35)
+            item_3d.prop_set('ddd:static', False, children=True)
             item_3d = self.osm.catalog.add(key, item_3d)
 
         item_3d = item_3d.translate([coords[0], coords[1], 0.0])
         item_3d.name = 'Lamppost: %s' % item_2d.name
-        item_3d.prop_set('ddd:static', False, children=True)
 
         return item_3d
 
@@ -403,6 +405,7 @@ class ItemsOSMBuilder():
         item_3d = self.osm.catalog.instance(key)
         if not item_3d:
             item_3d = urban.traffic_sign(signtype)
+            item_3d.prop_set('ddd:static', False, children=True)
             item_3d = self.osm.catalog.add(key, item_3d)
 
         coords = item_2d.geom.coords[0]
